plugins 
{
	id 'java-library'    
}

description = 'Micro agent execution'

group = 'org.activecomponents.jadex'

if(System.getProperty("PUBLISH_SCRIPT_PATH"))
	apply from: System.getProperty("PUBLISH_SCRIPT_PATH")

java
{
	sourceCompatibility = '1.21'
}

repositories
{
	mavenCentral()
}

dependencies
{
	def v = System.getProperty('JADEX_VERSION')?:'+'
	implementation 'org.activecomponents.jadex:core:'+v
	implementation 'org.activecomponents.jadex:execution:'+v
	implementation 'org.activecomponents.jadex:common:'+v
	//implementation 'org.activecomponents.jadex:bytecode:'+v
	implementation 'org.activecomponents.jadex:future:'+v
	implementation 'org.activecomponents.jadex:javaparser:'+v
	implementation 'org.activecomponents.jadex:collection:'+v
	implementation 'org.activecomponents.jadex:traverser:'+v
	implementation 'org.activecomponents.jadex:injection:'+v
	implementation 'org.activecomponents.jadex:eca:'+v
	
	implementation 'org.ow2.asm:asm:9.9'
	implementation 'org.ow2.asm:asm-commons:9.9'

	//implementation 'net.bytebuddy:byte-buddy:1.17.8'
	//implementation 'net.bytebuddy:byte-buddy-agent:1.17.8'
	
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
    //testImplementation 'org.mockito:mockito-core:5.12.0'
    
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
	// required for gradle 9!? https://docs.gradle.org/8.7/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


test 
{
	useJUnitPlatform()
}

processResources 
{
    from ('src/main/java') 
    {
        include '**/.system'
    }
}
